Turn signature help on in zed

--- a/zed_settings.json
+++ b/zed_settings.json
@@ -85,5 +85,6 @@
   "seed_search_query_from_cursor": "selection",
   "assistant": {
     "enabled": false
-  }
+  },
+  "auto_signature_help": true
 }
