--- a/zed_settings.json
+++ b/zed_settings.json
@@ -8,7 +8,7 @@
 // from the command palette or from `Zed` application menu.
 {
   "features": {
-    "inline_completion": false
+    "inline_completion_provider": "none"
   },
   "telemetry": {
     "diagnostics": false,
