--- a/zed_settings.json
+++ b/zed_settings.json
@@ -48,8 +48,7 @@
   },
   "wrap_guides": [80, 88, 100],
   "tabs": {
-    "git_status": true,
-    "file_icons": true
+    "git_status": true
   },
   "languages": {
     "Python": {
