Show status bar in tmux only if there are multiple windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,13 @@ bind-key l select-pane -R
 # Put the status bar at top
 set-option -g status-position top
 
+# Show the status bar only if there are multiple windows
+set -g status off
+set-hook -g after-new-window      'if "[ #{session_windows} -gt 1 ]" "set status on"'
+set-hook -g after-kill-pane       'if "[ #{session_windows} -lt 2 ]" "set status off"'
+set-hook -g pane-exited           'if "[ #{session_windows} -lt 2 ]" "set status off"'
+set-hook -g window-layout-changed 'if "[ #{session_windows} -lt 2 ]" "set status off"'
+
 set -g base-index 1
 set -g pane-base-index 1
 
