--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,10 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Set the status keys and mode keys to be the same as vim
+set-option -g status-keys vi
+set-option -g mode-keys vi
+
 # Put the status bar at top
 set-option -g status-position top
 
