--- a/zed_settings.json
+++ b/zed_settings.json
@@ -61,6 +61,9 @@
           "arguments": ["-"]
         }
       }
+    },
+    "Markdown": {
+      "soft_wrap": "preferred_line_length"
     }
   },
   "git": {
