--- a/zed_settings.json
+++ b/zed_settings.json
@@ -55,12 +55,21 @@
   "languages": {
     "Python": {
       "enable_language_server": true,
-      "format_on_save": {
-        "external": {
-          "command": "black",
-          "arguments": ["-"]
+      "language_servers": ["pyright", "ruff"],
+      "format_on_save": "on",
+      "formatter": [
+        {
+          "code_actions": {
+            "source.organizeImports.ruff": true,
+            "source.fixAll.ruff": true
+          }
+        },
+        {
+          "language_server": {
+            "name": "ruff"
+          }
         }
-      }
+      ]
     },
     "Markdown": {
       "soft_wrap": "preferred_line_length"
