Move status bar in tmux to bottom

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ set-option -g status-keys vi
 set-option -g mode-keys vi
 
 # Put the status bar at top
-set-option -g status-position top
+set-option -g status-position bottom
 
 # Show the status bar only if there are multiple windows
 set -g status off
