--- a/zed_settings.json
+++ b/zed_settings.json
@@ -49,7 +49,8 @@
   },
   "wrap_guides": [80, 88, 100],
   "tabs": {
-    "git_status": true
+    "git_status": true,
+    "activate_on_close": "left_neighbour"
   },
   "languages": {
     "Python": {
