--- a/zed_settings.json
+++ b/zed_settings.json
@@ -7,8 +7,15 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "edit_predictions": {
+    "mode": "subtle",
+    "enabled_in_text_threads": false
+  },
+  "agent": {
+    "play_sound_when_agent_done": true
+  },
   "features": {
-    "edit_prediction_provider": "none"
+    "edit_prediction_provider": "zed"
   },
   "telemetry": {
     "diagnostics": false,
@@ -22,8 +29,8 @@
   },
   "vim_mode": true,
   "relative_line_numbers": true,
-  "ui_font_size": 16,
   "ui_font_family": "Zed Plex Sans",
+  "ui_font_size": 16,
   "buffer_font_size": 16,
   "buffer_font_family": "Zed Plex Mono",
   "auto_update": true,
@@ -31,7 +38,8 @@
   "remove_trailing_whitespace_on_save": true,
   "scrollbar": {
     "git_diff": true,
-    "selections": true,
+    "selected_text": true,
+    "selected_symbol": true,
     "show": "auto"
   },
   "terminal": {
@@ -90,10 +98,14 @@
     "button": "never"
   },
   "seed_search_query_from_cursor": "always",
-  "assistant": {
-    "enabled": false
-  },
   "auto_signature_help": true,
-  "show_user_picture": false,
-  "on_last_window_closed": "quit_app"
+  "title_bar": {
+    "show_branch_icon": true,
+    "show_user_picture": false,
+    "show_project_items": true
+  },
+  "on_last_window_closed": "quit_app",
+  "search": {
+    "button": false
+  }
 }
