--- a/jj_config.toml
+++ b/jj_config.toml
@@ -1,29 +1,1 @@
-"$schema" = "https://jj-vcs.github.io/jj/latest/config-schema.json"
-
-[user]
-name = "Smit Chaudhary"
-email = "smitchaudhary10@gmail.com"
-
-[aliases]
-tug = ["bookmark", "move", "--from", "closest_bookmark(@-)", "--to", "@-"]
-e = ["edit"]
-pull = ["git", "fetch"]
-push = ["git", "push", "--allow-new"]
-
-[revset-aliases]
-"closest_bookmark(to)" = "heads(::to & bookmarks())"
-
-[git]
-push-new-bookmarks = true
-
-
-[ui]
-default-command = "log"
-diff-editor = ":builtin"
-merge-editor = ":builtin"
-editor = "vim"
-
-[signing]
-behavior = "own"
-backend = "ssh"
-key = "~/.ssh/id_ed25519.pub"
+/Users/smit/.config/jj/config.toml
