--- a/tmux.conf
+++ b/tmux.conf
@@ -1,69 +1,1 @@
-# Unbind r and then bind it to reload the tmux config
-unbind r
-bind r source-file ~/.tmux.conf
-
-# Set the prefix to Control-S
-set -g prefix C-s
-
-# Set mouse on
-set -g mouse on
-
-# Set navigatoin using the same keybindings as vim
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-# Set the status keys and mode keys to be the same as vim
-set-option -g status-keys vi
-set-option -g mode-keys vi
-
-# Put the status bar at top
-set-option -g status-position bottom
-
-# Show the status bar only if there are multiple windows
-set -g status off
-set-hook -g after-new-window      'if "[ #{session_windows} -gt 1 ]" "set status on"'
-set-hook -g after-kill-pane       'if "[ #{session_windows} -lt 2 ]" "set status off"'
-set-hook -g pane-exited           'if "[ #{session_windows} -lt 2 ]" "set status off"'
-set-hook -g window-layout-changed 'if "[ #{session_windows} -lt 2 ]" "set status off"'
-
-set -g base-index 1
-set -g pane-base-index 1
-
-# Set more ergonomic splitting of windows
-bind | split-window -h
-bind - split-window -v
-
-set -g pane-border-status top
-set -g pane-border-format " [ ###P #T ] "
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
-
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_left ""
-set -g @catppuccin_status_modules_right "session directory"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "yes"
-
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+/Users/smit/.tmux.conf
