Use based pyright

--- a/zed_settings.json
+++ b/zed_settings.json
@@ -107,7 +107,7 @@
   "languages": {
     "Python": {
       "enable_language_server": true,
-      "language_servers": ["pyright", "ruff"],
+      "language_servers": ["basedpyright", "ruff"],
       "format_on_save": "on",
       "formatter": [
         {
