--- a/zed_settings.json
+++ b/zed_settings.json
@@ -78,7 +78,7 @@
     "light": "Catppuccin Latte"
   },
   "vim_mode": true,
-  "relative_line_numbers": true,
+  "relative_line_numbers": "wrapped",
   "ui_font_family": "IBM Plex Sans",
   "ui_font_size": 16,
   "buffer_font_size": 16,
