Allow trailing comam in zed jsonc schema

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,12 +1,12 @@
 {
   "agent_servers": {
     "gemini": {
-      "ignore_system_version": false
-    }
+      "ignore_system_version": false,
+    },
   },
   "edit_predictions": {
     "mode": "subtle",
-    "enabled_in_text_threads": false
+    "enabled_in_text_threads": false,
   },
   "agent": {
     "profiles": {
@@ -33,10 +33,10 @@
           "rename": true,
           "symbol_info": true,
           "thinking": true,
-          "create_directory": true
+          "create_directory": true,
         },
         "enable_all_context_servers": true,
-        "context_servers": {}
+        "context_servers": {},
       },
       "ask": {
         "name": "Ask",
@@ -50,32 +50,32 @@
           "read_file": true,
           "grep": true,
           "thinking": true,
-          "terminal": false
+          "terminal": false,
         },
         "enable_all_context_servers": false,
-        "context_servers": {}
-      }
+        "context_servers": {},
+      },
     },
     "default_profile": "write",
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4-thinking"
+      "model": "claude-sonnet-4-thinking",
     },
     "play_sound_when_agent_done": true,
-    "use_modifier_to_send": true
+    "use_modifier_to_send": true,
   },
   "features": {
-    "edit_prediction_provider": "zed"
+    "edit_prediction_provider": "zed",
   },
   "telemetry": {
     "diagnostics": false,
-    "metrics": false
+    "metrics": false,
   },
   "base_keymap": "VSCode",
   "theme": {
     "mode": "system",
     "dark": "Ayu Dark",
-    "light": "Gruvbox Light Hard"
+    "light": "Gruvbox Light Hard",
   },
   "vim_mode": true,
   "relative_line_numbers": "wrapped",
@@ -90,18 +90,18 @@
     "git_diff": true,
     "selected_text": true,
     "selected_symbol": true,
-    "show": "auto"
+    "show": "auto",
   },
   "terminal": {
     "blinking": "on",
     "font_family": "Hack Nerd Font Mono",
-    "font_size": 14
+    "font_size": 14,
   },
   "wrap_guides": [80, 88, 100],
   "tabs": {
     "git_status": true,
     "activate_on_close": "left_neighbour",
-    "file_icons": true
+    "file_icons": true,
   },
   "icon_theme": "Material Icon Theme",
   "languages": {
@@ -114,43 +114,43 @@
         { "code_action": "source.fixAll.ruff" },
         {
           "language_server": {
-            "name": "ruff"
-          }
-        }
-      ]
+            "name": "ruff",
+          },
+        },
+      ],
     },
     "Markdown": {
-      "soft_wrap": "preferred_line_length"
-    }
+      "soft_wrap": "preferred_line_length",
+    },
   },
   "git": {
     "git_gutter": "tracked_files",
     "gutter_debounce": 500,
     "inline_blame": {
       "enabled": true,
-      "delay_ms": 500
-    }
+      "delay_ms": 500,
+    },
   },
   "project_panel": {
     "auto_fold_dirs": false,
-    "git_status": true
+    "git_status": true,
   },
   "collaboration_panel": {
-    "button": false
+    "button": false,
   },
   "notification_panel": {
-    "button": false
+    "button": false,
   },
   "seed_search_query_from_cursor": "always",
   "auto_signature_help": true,
   "title_bar": {
     "show_branch_icon": true,
     "show_user_picture": false,
-    "show_project_items": true
+    "show_project_items": true,
   },
   "on_last_window_closed": "quit_app",
   "search": {
-    "button": false
+    "button": false,
   },
-  "colorize_brackets": true
+  "colorize_brackets": true,
 }
