--- a/zed/settings.json
+++ b/zed/settings.json
@@ -82,7 +82,7 @@
   "ui_font_family": "IBM Plex Sans",
   "ui_font_size": 16,
   "buffer_font_size": 16,
-  "buffer_font_family": "MonoLisa",
+  "buffer_font_family": "Berkeley Mono Nerd Font",
   "auto_update": true,
   "confirm_quit": true,
   "remove_trailing_whitespace_on_save": true,
