Added window dimming to inactive panes in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,8 @@ bind - split-window -v
 
 set -g pane-border-status top
 set -g pane-border-format " [ ###P #T ] "
+set -g window-style "fg=#9399b2"
+set -g window-active-style "fg=#cdd6f4"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
